# automatic_loading

./: .gitignore  Makefile  deploy.sh
.devcontainer/: .vimrc  Dockerfile
.github/workflows/: CI.yaml
src/cli/: Makefile
src/cli/tools/: CMakeLists.txt  main.cpp
src/config/: Makefile
src/config/lib/: CMakeLists.txt  config_lib.cpp  config_lib.h
src/config/test/: CMakeLists.txt  test_main.cpp
src/hn_hht/: Makefile  hn_hht_idl.thrift
src/hn_hht/daemon/: CMakeLists.txt  hht_main.cpp
src/hn_hht/lib/: CMakeLists.txt  hn_hht_cli.cpp  hn_hht_cli.h  hn_hht_lib.cpp  hn_hht_lib.h
src/lidar/: Makefile  lidar_idl.thrift
src/lidar/daemon/: CMakeLIsts.txt  lidar_imp.cpp  lidar_imp.h  lidar_main.cpp
src/lidar/daemon/rs_driver/cmake/: rs_driverConfig.cmake
src/lidar/daemon/rs_driver/src/rs_driver/driver/: lidar_driver_impl.hpp
src/lidar/daemon/rs_driver/src/rs_driver/msg/: pcl_point_cloud_msg.hpp
src/lidar/lib/: CMakeLists.txt  lidar_cli.cpp  lidar_cli.h  lidar_lib.cpp  lidar_lib.h
src/live_camera/: Makefile  live_camera_idl.thrift
src/live_camera/daemon/: CMakeLists.txt  live_camera_main.cpp
src/live_camera/lib/: CMakeLists.txt  live_camera_cli.cpp  live_camera_cli.h  live_camera_lib.cpp  live_camera_lib.h
src/live_camera/web/: live_camera.vue
src/log/: Makefile  log_idl.thrift
src/log/daemon/: CMakeLists.txt  log_main.cpp  log_service_imp.cpp  log_service_imp.h
src/log/lib/: CMakeLists.txt  log_cli.cpp  log_cli.h  log_lib.cpp  log_lib.h
src/log/test/: CMakeLists.txt  test_log_main.cpp
src/log/web/: log_explore.vue
src/modbus_io/: Makefile  modbus_io_idl.thrift
src/modbus_io/daemon/: CMakeLists.txt  modbus_main.cpp
src/modbus_io/lib/: CMakeLists.txt  modbus_io_cli.cpp  modbus_io_cli.h  modbus_io_lib.cpp  modbus_io_lib.h
src/modbus_io/web/: io_panel.vue
src/plate_gate/: Makefile  plate_gate_idl.thrift
src/plate_gate/daemon/: CMakeLists.txt  plate_main.cpp
src/plate_gate/lib/: CMakeLists.txt  plate_gate_cli.cpp  plate_gate_cli.h
src/public/: Makefile  public_idl.thrift
src/public/conf/: change_base_url.sh  frpc.ini  nginx.conf
src/public/daemon/: CMakeLists.txt  ad_init_main.cpp
src/public/lib/: CMakeLists.txt  ad_event_sc.cpp  ad_event_sc.h  ad_rpc.cpp  ad_rpc.h  al_utils.cpp  al_utils.h  clilocalsession.h  common_cli.cpp  common_cli.h  loopscheduler.h  modbus_driver.cpp  modbus_driver.h  public_cli.cpp  public_cli.h
src/public/lib/conf/: lua_sample.lua
src/public/lib/detail/: linuxkeyboard.cpp  linuxkeyboard.h  rang.h
src/public/web/cli_server/: index.js  package-lock.json  package.json  webpack.config.js
src/public/web/cli_server/src/: index.js  websocket-data-sync.js
src/public/web/pc-ui/: README.md  package-lock.json  package.json  vite.config.js
src/public/web/pc-ui/src/: App.vue  main.js  ws_sync_client.js
src/public/web/pc-ui/src-tauri/: tauri.conf.json
src/public/web/pc-ui/src/components/: PcdShow.vue
src/public/web/pc-ui/src/pages/: Home.vue
src/public/web/pc-ui/src/router/: index.js
src/public/web/pc-ui/src/stores/: remote_name.js  sm_event.js  status_info.js
src/scale/: Makefile  scale_idl.thrift
src/scale/daemon/: CMakeLists.txt  scale_imp.cpp  scale_imp.h  scale_main.cpp
src/scale/lib/: CMakeLists.txt  scale_cli.cpp  scale_cli.h  scale_lib.cpp  scale_lib.h
src/scale/web/: scale.vue
src/state_machine/: Makefile  state_machine_idl.thrift
src/state_machine/daemon/: CMakeLists.txt  sm_daemon_main.cpp  state_machine_imp.cpp  state_machine_imp.h
src/state_machine/lib/: CMakeLists.txt  state_machine_cli.cpp  state_machine_cli.h  state_machine_kit_cli.cpp  state_machine_kit_cli.h  state_machine_lib.cpp  state_machine_lib.h
src/state_machine/tools/: Makefile
src/state_machine/tools/video_cast/: index.html  main.js  package-lock.json  package.json  preload.js  renderer.js  styles.css  tcp-client.js  video_player.html
src/state_machine/web/: state_machine.vue
src/xlrd/: Makefile  xlrd_idl.thrift
src/xlrd/daemon/: CMakeLists.txt  xlrd_main.cpp
src/xlrd/lib/: CMakeLists.txt  xlrd_cli.cpp  xlrd_cli.h  xlrd_lib.cpp  xlrd_lib.h
src/xlrd/web/: xlrd_show.vue
